# sqlite-utils-tui

./: README.md  pyproject.toml  sqlite_utils_tui.py
tests/: test_tui.py
