[project]
name = "sqlite-utils-tui"
version = "0.1"
description = "Terminal UI for sqlite-utils"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "sqlite-utils",
    "trogon>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/simonw/sqlite-utils-tui"
Changelog = "https://github.com/simonw/sqlite-utils-tui/releases"
Issues = "https://github.com/simonw/sqlite-utils-tui/issues"
CI = "https://github.com/simonw/sqlite-utils-tui/actions"

[project.entry-points.sqlite_utils]
tui = "sqlite_utils_tui"

[project.optional-dependencies]
test = ["pytest"]
